--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,15 @@
     <br>
     <h1>Transparency Data for ASBL in Belgium </h1>
     <br>
-    <h3>This is a list that automatically verifies if ASBL website contain transparency data and give the date of last publication of financial data.</h3>
+    <h4>This is a list that automatically verifies:
+      <br>
+      1. if ASBL website contain transparency data on their website
+      <br>
+      2. The date of last publication of financial statements.</h4>
     <br>
-    <p>We use the CBE public search, Central Balance Sheet Office and web scraping tools to verify check data in real time.</p>
-    <br>
-    <p>More info on our github: https://github.com/wainaze/Transparencia</p>
+    <h4>We use the CBE public search, Central Balance Sheet Office and web scraping tools to verify check data in real time.</h4>
+    <h4>More info on our github repo
+    <a href="https://github.com/wainaze/Transparencia">https://github.com/wainaze/Transparencia</a></h4>
 
     <a href="/getfile" class="btn btn-primary" role="button">Download Full Excel</a>
     <br>
