adding target blank to github link

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <br>
     <h4>We use the CBE public search, Central Balance Sheet Office and web scraping tools to verify check data in real time.</h4>
     <h4>More info on our github repo
-    <a href="https://github.com/wainaze/Transparencia">https://github.com/wainaze/Transparencia</a></h4>
+    <a href="https://github.com/wainaze/Transparencia" target="blank">https://github.com/wainaze/Transparencia</a></h4>
 
     <a href="/getfile" class="btn btn-primary" role="button">Download Full Excel</a>
     <br>
